@@ -132,6 +132,7 @@ library
                     Data.Double.Approximate
                     Data.Double.Shaman
                     Data.Ratio.Generalized
+                    Data.Radical
 
                     -- * Measurements
                     Data.Measured
