@@ -16,6 +16,7 @@
 - Explicit export list for ~Data.Permutation~.
 - Added the ~Data.Sign~ and ~Data.Indexed~ modules.
 - Support mtl 2.3
+- Added ~Data.Radical~ for types that support computing square roots.
 
 ** 0.14
 
